Theme name edit

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: PHN year in review
+Theme Name: PHN
 Author: Elliot Kidd & Nicholas MacArthur
 Description: Theme for ACT Logistics
 
