--- a/sass/theme/_stack.scss
+++ b/sass/theme/_stack.scss
@@ -578,7 +578,7 @@ img {
 [data-overlay]:before {
   position: absolute;
   content: '';
-  background: #252525;
+  background: #003E6A;
   width: 100%;
   height: 100%;
   top: 0;
