--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -3,9 +3,10 @@
 // Just copy a variable from src/sass/bootstrap4/_variables.scss, paste it here and edit the value.
 
 
-$primary: #ed715d; // Thats a sample how you could change a BootStrap variable.
+$primary: #00BBC3; // Thats a sample how you could change a BootStrap variable.
 
 $heading-color: #233a56;
 $body-color: #233a56;
 
-$dark: #233a56;
+$accent:#F78D2D;
+$dark: #003E6A;
