Header opening animation

--- a/css/theme.css
+++ b/css/theme.css
@@ -16046,7 +16046,7 @@ hr.short {
   left: 0;
   width: 100%;
   padding: 40px 15px;
-  z-index: 1020;
+  z-index: 15;
   color: #fff;
   /* animation */
   opacity: 1;
@@ -16209,7 +16209,8 @@ hr.short {
   position: relative;
   height: 0.875rem;
   width: 1.375rem;
-  margin-right: 2rem; }
+  margin-right: 2rem;
+  z-index: 2; }
   .toggle-menu:before {
     content: "";
     background-color: #fff;
@@ -16270,8 +16271,28 @@ hr.short {
     background-color: #003E6A;
     width: 188.3125rem;
     height: 188.3125rem;
-    top: -180.0625rem;
+    top: -178.875rem;
     right: -94.156265rem; }
+
+.shape-overlays {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -2; }
+
+.shape-overlays path:nth-of-type(1) {
+  fill: #003E6A; }
+
+.shape-overlays path:nth-of-type(2) {
+  fill: #00BBC3; }
+
+.shape-overlays path:nth-of-type(3) {
+  fill: #F78D2D; }
+
+.shape-overlays path:nth-of-type(4) {
+  fill: #efefef; }
 
 #footer {
   background: #003E6A;
