--- a/css/theme.css
+++ b/css/theme.css
@@ -16045,7 +16045,7 @@ hr.short {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 40px 15px;
+  padding: 1rem;
   z-index: 1020;
   color: #fff;
   /* animation */
@@ -16059,8 +16059,7 @@ hr.short {
   @media (max-width: 767.98px) {
     #header {
       margin-left: 0px;
-      padding: 0px;
-      background: #fff; } }
+      padding: 0px; } }
   #header .header__navigation .active > .nav-link {
     color: white; }
   #header .header__navigation li {
@@ -16079,24 +16078,6 @@ hr.short {
 #header .logo {
   margin-bottom: 0;
   z-index: 3; }
-
-#header .logo--white {
-  display: block; }
-  @media (max-width: 767.98px) {
-    #header .logo--white {
-      display: none; } }
-
-#header .logo--black {
-  display: none; }
-  @media (max-width: 767.98px) {
-    #header .logo--black {
-      display: block; } }
-
-#header.-white .logo--white {
-  display: none; }
-
-#header.-white .logo--black {
-  display: block; }
 
 .header__logo {
   display: block;
@@ -16155,55 +16136,6 @@ hr.short {
   /* mobile */
   /* actions */
   /* margins */ }
-
-#header.-white {
-  padding: 10px 15px;
-  color: #2f353e;
-  background: #fff !important;
-  box-shadow: 0 0 2px rgba(6, 8, 8, 0.15);
-  transition-delay: 0s;
-  transition-duration: 0.4s; }
-  @media (max-width: 767.98px) {
-    #header.-white {
-      padding: 0px; } }
-  #header.-white .header__navigation .active > .nav-link {
-    color: #003e6a; }
-  #header.-white a {
-    color: rgba(0, 62, 106, 0.7);
-    transition: 0.2s;
-    padding: 0; }
-    #header.-white a:hover {
-      color: #003e6a; }
-
-#header.-white .menu h3 i {
-  background-position: -100px 0;
-  width: 67px;
-  height: 32px;
-  margin: -1px 0 0 -1px; }
-
-#header.-white .menu .menu-item:hover,
-#header.-white .menu .menu-item:focus {
-  background: #fafafb !important; }
-
-#header.-white .menu .menu-item.-active:after {
-  content: "";
-  display: block;
-  background: #00dab4;
-  height: 3px;
-  left: 15px;
-  right: 15px;
-  position: absolute;
-  bottom: 0; }
-
-#header.-white .menu .menu-item .count {
-  background: #cbccce; }
-
-#acf-christmas-hat {
-  position: absolute;
-  width: 30px;
-  height: auto;
-  top: 12px;
-  left: 19px; }
 
 .toggle-menu {
   position: relative;
@@ -16484,26 +16416,21 @@ section.bg-effect--ken-burns {
 .page-header {
   padding: 200px 0 100px;
   background-color: #003E6A; }
+  @media (max-width: 767.98px) {
+    .page-header {
+      padding: 150px 0 50px; } }
   .page-header--home {
-    padding: 200px 0 200px;
-    max-height: 800px;
-    min-height: 400px;
+    padding: 200px 0;
     position: relative; }
     .page-header--home .pos-vertical-center {
       -webkit-transform: translateY(-20%);
               transform: translateY(-20%); }
   .page-header--page {
     padding: 200px 0;
-    height: 50vh;
-    max-height: 800px;
-    min-height: 400px;
     position: relative; }
     .page-header--page .pos-vertical-center {
       -webkit-transform: translateY(-20%);
               transform: translateY(-20%); }
-  @media (max-width: 767.98px) {
-    .page-header {
-      padding: 150px 0 50px; } }
 
 .work-tiles {
   display: flex;
@@ -16689,6 +16616,12 @@ section.bg-effect--ken-burns {
     height: 80px;
     width: 2px;
     background-color: rgba(255, 255, 255, 0.5); }
+
+.story-wrap {
+  padding: 0 3rem; }
+  @media (max-width: 991.98px) {
+    .story-wrap {
+      padding: 0; } }
 
 /*
 * Use existing Bootstrap 4 classes and
