Header position updated -- burger now scrolls down & header stays at top

--- a/css/theme.css
+++ b/css/theme.css
@@ -16041,7 +16041,7 @@ hr.short {
   background: transparent;
   padding: 0;
   margin: 0;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -16206,9 +16206,10 @@ hr.short {
   left: 19px; }
 
 .toggle-menu {
-  position: relative;
+  position: fixed;
   height: 0.875rem;
   width: 1.375rem;
+  right: 2em;
   margin-right: 2rem;
   z-index: 2; }
   .toggle-menu:before {
