--- a/css/theme.css
+++ b/css/theme.css
@@ -16240,11 +16240,11 @@ hr.short {
   @media (max-width: 767.98px) {
     .toggle-menu {
       display: block; } }
-  .toggle-menu.is-active .line {
+  .toggle-menu.is-opened-navi .line {
     -webkit-transform: rotate(135deg);
             transform: rotate(135deg);
     top: 50%; }
-    .toggle-menu.is-active .line:nth-of-type(2) {
+    .toggle-menu.is-opened-navi .line:nth-of-type(2) {
       width: 100%;
       top: 50%;
       -webkit-transform: rotate(-135deg);
@@ -16363,6 +16363,96 @@ hr.short {
   .feature-tile:hover .background-image-holder {
     -webkit-transform: scale(1.1);
             transform: scale(1.1); }
+
+.floating__circles {
+  position: absolute; }
+  .floating__circles * {
+    border-radius: 100%;
+    position: absolute; }
+  .floating__circles--left {
+    left: 6rem; }
+  .floating__circles--right {
+    right: 6rem; }
+  .floating__circles--1 :nth-child(1) {
+    background-color: #00BBC3;
+    width: 3rem;
+    height: 3rem;
+    top: -4rem;
+    z-index: 1; }
+  .floating__circles--1 :nth-child(2) {
+    background-color: transparent;
+    border: 1px solid #9BCB50;
+    width: 8rem;
+    height: 8rem;
+    z-index: -1; }
+  .floating__circles--2 :nth-child(1) {
+    background-color: #00BBC3;
+    width: 2rem;
+    height: 2rem;
+    top: -4rem;
+    z-index: 1; }
+  .floating__circles--2 :nth-child(2) {
+    background-color: transparent;
+    border: 1px solid #9BCB50;
+    width: 10rem;
+    height: 10rem;
+    z-index: -1; }
+  .floating__circles--2 :nth-child(3) {
+    background-color: #F78D2D;
+    width: 6rem;
+    height: 6rem;
+    z-index: -1; }
+  .floating__circles--3 :nth-child(1) {
+    background-color: #F78D2D;
+    width: 2rem;
+    height: 2rem;
+    top: -4rem;
+    z-index: 1; }
+  .floating__circles--3 :nth-child(2) {
+    background-color: transparent;
+    border: 1px solid #00BBC3;
+    width: 8rem;
+    height: 8rem;
+    z-index: -1; }
+  .floating__circles--3 :nth-child(3) {
+    background-color: #9BCB50;
+    width: 4rem;
+    height: 4rem;
+    z-index: -1; }
+  .floating__circles--4 :nth-child(1) {
+    background-color: #F78D2D;
+    width: 2rem;
+    height: 2rem;
+    top: -4rem;
+    z-index: 1; }
+  .floating__circles--4 :nth-child(2) {
+    background-color: transparent;
+    border: 1px solid #9BCB50;
+    width: 8rem;
+    height: 8rem;
+    z-index: -1; }
+  .floating__circles--4 :nth-child(3) {
+    background-color: #00BBC3;
+    width: 4rem;
+    height: 4rem;
+    z-index: -1; }
+  .floating__circles--4 :nth-child(1) {
+    background-color: #00BBC3;
+    width: 2rem;
+    height: 2rem;
+    top: -4rem;
+    z-index: 1; }
+  .floating__circles--4 :nth-child(2) {
+    background-color: #9BCB50;
+    width: 2rem;
+    height: 2rem;
+    z-index: -1; }
+  .floating__circles--4 :nth-child(3) {
+    border: 1px solid #F78D2D;
+    background-color: transparent;
+    width: 6rem;
+    height: 6rem;
+    z-index: -1; }
 
 body {
   background: #003E6A; }
