--- a/sass/theme/sections/_header.scss
+++ b/sass/theme/sections/_header.scss
@@ -265,7 +265,7 @@
         display: block;
     }
 
-    &.is-active .line {
+    &.is-opened-navi .line {
         transform: rotate(135deg);
         top: 50%;
         &:nth-of-type(2) {
