--- a/sass/theme/_stack.scss
+++ b/sass/theme/_stack.scss
@@ -3327,15 +3327,20 @@ form[action*='list-manage.com'] .small-meta {
 .page-navigator ul {
   display: inline-block;
   padding: 0.92857143em;
-  background: rgba(0, 0, 0, 0.4);
+  // background: rgba(0, 0, 0, 0.4);
   border-radius: 1.85714286em;
   transition: all .2s ease;
 }
+
+.page-navigator li {
+  list-style: none;
+  
+}
 .page-navigator ul:hover {
-  background: rgba(0, 0, 0, 0.6);
+  // background: rgba(0, 0, 0, 0.6);
 }
 .page-navigator ul li:not(:last-child) {
-  margin-bottom: 1.85714286em;
+  margin-bottom: 0.875em;
 }
 @media all and (max-width: 767px) {
   .page-navigator {
@@ -3354,6 +3359,7 @@ form[action*='list-manage.com'] .small-meta {
   transition: all .2s ease;
   display: block;
   position: relative;
+  background-blend-mode: difference;
 }
 .page-navigator li a:not(:hover) {
   opacity: .5;
