--- a/sass/theme/sections/_footer.scss
+++ b/sass/theme/sections/_footer.scss
@@ -30,3 +30,40 @@
 .footer__logo {
   width: 150px;
 }
+
+
+.preloader-wrap{
+    width:100%;
+    height:100%;
+    position:fixed;
+    z-index:100;
+    left:0;
+    top:0;
+    background-color:white;
+}
+
+.preloader__inner{
+    position:absolute;
+    left:50%;
+    width:4em;
+    top:50%;
+    transform:translateY(-50%, -50%);
+    height:4em;
+    background:$primary;
+    border-radius:100%;
+    border-right:0px;
+    animation-name: loader;
+    animation-duration:1200ms;
+    animation-iteration-count: infinite;
+
+}
+
+@keyframes loader{
+    from{
+        transform:scale(0);
+    }
+    to {
+        transform:scale(1);
+        opacity:0;
+    }
+}
