--- a/css/theme.css
+++ b/css/theme.css
@@ -16139,6 +16139,93 @@ hr.short {
   /* actions */
   /* margins */ }
 
+.menu {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+  opacity: 0;
+  display: none;
+  transition: 400ms ease-in-out;
+  transition-delay: 0ms;
+  pointer-events: none; }
+  .menu.is-active {
+    display: block;
+    opacity: 1;
+    transition-delay: 600ms; }
+  .menu * {
+    transition: 400ms ease-in-out;
+    text-align: center; }
+  .menu__card {
+    width: calc(100% - 2rem) !important;
+    height: calc(100% - 2rem) !important;
+    display: inline-flex;
+    align-items: flex-end;
+    pointer-events: all; }
+    .menu__card:hover .overlay {
+      opacity: 0.4; }
+    .menu__card:hover .menu__card--after :nth-child(1) {
+      -webkit-transform: translate(-250%, 20%);
+              transform: translate(-250%, 20%); }
+    .menu__card:hover .menu__card--after :nth-child(2) {
+      -webkit-transform: translate(0%, -160%);
+              transform: translate(0%, -160%); }
+    .menu__card:hover .menu__card--after :nth-child(3) {
+      -webkit-transform: translate(-40%, 20%);
+              transform: translate(-40%, 20%); }
+    .menu__card--after {
+      position: absolute;
+      width: calc(100% - 2rem);
+      height: calc(100% - 2rem);
+      left: 1rem;
+      top: 1rem;
+      z-index: -2; }
+      .menu__card--after span {
+        border-radius: 100%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+      .menu__card--after :nth-child(1) {
+        background-color: #00BBC3;
+        -webkit-transform: translate(0%, 0%);
+                transform: translate(0%, 0%);
+        width: 4em;
+        height: 4em; }
+      .menu__card--after :nth-child(2) {
+        background-color: #F78D2D;
+        -webkit-transform: translate(0%, 0%);
+                transform: translate(0%, 0%);
+        width: 6em;
+        height: 6em; }
+      .menu__card--after :nth-child(3) {
+        background-color: #003E6A;
+        -webkit-transform: translate(0%, 0%);
+                transform: translate(0%, 0%);
+        width: 8em;
+        height: 8em; }
+  .menu .overlay {
+    background-color: #000;
+    opacity: 0.2;
+    position: absolute;
+    left: 1rem;
+    top: 1rem;
+    width: calc(100% - 2rem) !important;
+    height: calc(100% - 2rem) !important; }
+  .menu__image {
+    left: 1rem;
+    top: 1rem;
+    width: calc(100% - 2rem) !important;
+    height: calc(100% - 2rem) !important;
+    z-index: -1; }
+  .menu__text {
+    color: #fff;
+    z-index: 2;
+    text-align: left;
+    margin-bottom: 2rem;
+    width: 100%;
+    padding: 0 2rem; }
+
 .toggle-menu {
   position: fixed;
   height: 0.875rem;
