--- a/sass/theme/_stack.scss
+++ b/sass/theme/_stack.scss
@@ -4407,12 +4407,12 @@ hr[data-title]:before {
   padding: 0.92857143em;
   font-style: italic;
 }
-.bg--dark hr:not(.short),
+/*.bg--dark hr:not(.short),
 .imagebg hr:not(.short),
 .bg--primary hr:not(.short) {
   opacity: .3;
 }
-/*! -- Stack Buttons
+! -- Stack Buttons
 .btn {
   position: relative;
 }
