--- a/sass/theme/sections/_header.scss
+++ b/sass/theme/sections/_header.scss
@@ -153,7 +153,9 @@
     display:block;
     opacity:1;
     transition-delay:600ms;
-
+    .menu__card{
+      display:inline-flex;
+    }
   }
 
   *{
@@ -165,7 +167,7 @@
   &__card{
     width:calc(100% - 2rem) !important;
     height: calc(100% - 2rem) !important;
-    display: inline-flex;
+    display: none;
     align-items: flex-end;
     pointer-events:all;
     &:hover{
