--- a/css/theme.css
+++ b/css/theme.css
@@ -16411,6 +16411,17 @@ hr.short {
   .feature-column__icon {
     width: 70px; }
 
+.overlapped {
+  margin-left: -7rem; }
+  .overlapped .overlapped__text {
+    padding: 0rem 4rem 4rem 6rem; }
+
+.overlapped--large {
+  margin-top: 4rem; }
+
+.overlapped__text {
+  padding: 0rem 8rem 4rem 2rem; }
+
 .feature-tile {
   position: relative; }
   .feature-tile * {
@@ -16526,37 +16537,6 @@ hr.short {
     width: 6rem;
     height: 6rem;
     z-index: -1; }
-
-.plyr *:focus {
-  outline: 0; }
-
-.plyr__play-large {
-  cursor: pointer; }
-
-.plyr {
-  border-radius: 6px; }
-
-/* PLYR COLOR */
-.plyr--audio .plyr__controls button.tab-focus:focus, .plyr--audio .plyr__controls button:hover, .plyr__play-large {
-  background: #ffbb46; }
-
-.plyr__progress--played, .plyr__volume--display {
-  color: #ffbb46; }
-
-.plyr input[type=range]::-ms-fill-lower {
-  background: #ffbb46; }
-
-.plyr input[type=range]:active::-webkit-slider-thumb {
-  background: #ffbb46; }
-
-.plyr input[type=range]:active::-moz-range-thumb {
-  background: #ffbb46; }
-
-.plyr input[type=range]:active::-ms-thumb {
-  background: #ffbb46; }
-
-.plyr--video .plyr__controls button.tab-focus:focus, .plyr--video .plyr__controls button:hover {
-  background: #ffbb46; }
 
 body {
   background: #003E6A; }
