--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -567,3 +567,50 @@ opacity: 0.2;
 .hidden{
   display:none;
 }
+
+/* smaller, dark, rounded square */
+.flickity-button {
+  background: $primary;
+  border-radius:100%;
+}
+.flickity-button:hover {
+  background: $dark;
+}
+
+.flickity-prev-next-button {
+  position:absolute;
+  border:none;
+  width: 45px;
+  height: 45px;
+  border-radius: 5px;
+  padding:10px;
+  margin:5px;
+  background: $primary;
+  border-radius:100%;
+  &:hover {
+    background: $dark;
+  }
+}
+/* icon color */
+.flickity-button-icon {
+  fill: white;
+}
+/* position outside */
+.flickity-prev-next-button.previous {
+  right: 60px;
+  left:unset;
+  &:before{
+    display:none;
+  }
+}
+.flickity-prev-next-button.next {
+  right: 5px;
+  &:before{
+    display:none;
+  }
+}
+.flickity-prev-next-button svg {
+  display: block; 
+  fill:$white !important;
+}
+
