--- a/sass/theme/_stack.scss
+++ b/sass/theme/_stack.scss
@@ -5585,13 +5585,13 @@ p .material-icons:first-child {
 .tooltip {
   position: relative;
   top: 3px;
-  display: inline-block;
   width: 1.23809524em;
   height: 1.23809524em;
   border-radius: 50%;
   background: #252525;
   text-align: center;
   cursor: pointer;
+  display:none;
 }
 .tooltip .tooltip__anchor {
   color: #fff;
